logs/django-djikiki.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_djikiki-1.1.egg-info'...
Listing './lib/python3.5/site-packages/djikiki'...
Listing './lib/python3.5/site-packages/djikiki/creole'...
Compiling './lib/python3.5/site-packages/djikiki/models.py'...
***   File "./lib/python3.5/site-packages/djikiki/models.py", line 79
    except ObjectDoesNotExist, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djikiki/templates'...
Listing './lib/python3.5/site-packages/djikiki/templates/djikiki'...
Compiling './lib/python3.5/site-packages/djikiki/userforms.py'...
***   File "./lib/python3.5/site-packages/djikiki/userforms.py", line 66
    print '***'
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/djikiki/userviews.py'...
***   File "./lib/python3.5/site-packages/djikiki/userviews.py", line 91
    print template_name
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/project'...
Listing './lib/python3.5/site-packages/project/djikiki'...
Listing './lib/python3.5/site-packages/project/djikiki/creole'...
Compiling './lib/python3.5/site-packages/project/djikiki/models.py'...
***   File "./lib/python3.5/site-packages/project/djikiki/models.py", line 79
    except ObjectDoesNotExist, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/project/djikiki/userforms.py'...
***   File "./lib/python3.5/site-packages/project/djikiki/userforms.py", line 66
    print '***'
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/project/djikiki/userviews.py'...
***   File "./lib/python3.5/site-packages/project/djikiki/userviews.py", line 91
    print template_name
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/project/userforms.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (userforms.py, line 48)
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
